# Electronics_trading_platform

./: .coveragerc  .env.sample  README.md  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_contact_options_alter_product_options_and_more.py  0003_salesnetworkcell_hierarchy_name.py  0004_alter_salesnetworkcell_hierarchy_level_and_more.py  0005_alter_salesnetworkcell_contact_and_more.py
config/: settings.py  urls.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py
